implementacion de cifrado de contraseña y jwt

--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
-#mean_user2
-#jXMfXajT1ZUOPuT6
 PORT: 3000
-DB_CNN=mongodb+srv://mean_user:Ctq4YAMz93SOJ6CU@cluster0.juh5sld.mongodb.net/hospitaldb
+SECRET_JWT_SEED=Este.es.unEjemplo.1204.ParaGenerarElTOKEN
